--- a/templates/index.html
+++ b/templates/index.html
@@ -47,39 +47,41 @@
         <div id="content">
             <h1>Scoreboard</h1>
             <div class="left">
-                <h2>Balance</h2>
+                <h4>Balance</h4>
                 <ul>
                     {{balance_list | safe}}
                 </ul>
-            </div>
-            <div class="right">
-                <h2>Allocation</h2>
+                <h4>Allocation</h4>
                 <ul>
                     {{allocation_list | safe}}
                 </ul>
             </div>
+            <div class="right">
+                <h4>Trending</h4>
+            </div>
             <div class="center">
-                <h2>Value</h2>
-                <p><strong>Initial {{initial_value | safe}}</strong></p>
-                <p><strong>Profit {{profit_value | safe}} or {{profit_percent | safe}}</strong></p>
+                <h4>Value</h4>
+                <li><strong>Initial {{initial_value | safe}}</strong></li>
+                <li><strong>Profit {{profit_value | safe}} or {{profit_percent | safe}}</strong></li>
             </div>
             <br class="clear"/>
             <h1>(AIM) System</h1>
             <div class="center">
                 <h6>devised by: Robert Lichello - HOH TO MAKE $1,000,000 IN THE STOCK MARKET AUTOMATICALLY! (Fourth Revised Edition) &copy; 2001</h6>
-                <ul>
-                    <h4>Check list</h4>
-                    <li>Correct any issues with your folder to get accurate numbers</li>
-                    <li>You do not have to post, buy or sell if you are just looking</li>
-                    <li>When you do press the buy or sell make sure to follow through with your broker</li>
-                </ul>
+                <h4>Check list</h4>
+                <li>Correct any issues with your folder to get accurate numbers</li>
+                <li>You do not have to post, buy or sell if you are just looking</li>
+                <li>When you do press the buy or sell make sure to follow through with your broker</li>
             </div>
+            <br class="clear"/>
             {{table | safe}}
+            <p class="center" style="color:blue;">{{initialize_prompt | safe}}</p>
             <form action="#" method="post">
             <div class="form_settings">
                 <p><span>&nbsp;</span><input class="submit" type="submit" name="action" value="{{post_display}}" style="{{post_background}} float: right;"/></p>
             </form>
             </div>
+            <br class="clear"/>
         </div>
     </div>
     <div id="content_footer"></div>
