--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
   <meta name="description" content="your investing scoreboard" />
   <meta name="keywords" content="AIM, investing, market, scoreboard" />
   <meta http-equiv="content-type" content="text/html; charset=windows-1252" />
+<link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}" />
 </head>
 
@@ -58,6 +59,19 @@
             </div>
             <div class="right">
                 <h4>Trending</h4>
+                <ul>
+                {% for trend in trends %}
+                    {% if trend.arrow == 'side.jpeg' %}
+                        <li>{{trend.percent | safe}} <img src="{{ url_for('static', filename='side.jpeg') }}" alt='side'/></li>
+                    {% endif %}
+                    {% if trend.arrow == 'up.jpeg' %}
+                        <li>{{trend.percent | safe}} <img src="{{ url_for('static', filename='up.jpeg') }}" alt='up'/></li>
+                    {% endif %}
+                    {% if trend.arrow == 'down.jpeg' %}
+                        <li>{{trend.percent | safe}} <img src="{{ url_for('static', filename='down.jpeg') }}" alt='down'/></li>
+                    {% endif %}
+                {% endfor %}
+                </ul>
             </div>
             <div class="center">
                 <h4>Value</h4>
