--- a/templates/history.html
+++ b/templates/history.html
@@ -53,8 +53,8 @@
             </form>
         </div>
         <div id="content">
-            <h1>History</h1>
-            <h4 class = "center">Year : {{year_string}}</h4>
+            <h1 class="center">History (year: {{year_string}})</h1>
+            
             {{table | safe}}
             <br class="clear"/>
 
