--- a/templates/index.html
+++ b/templates/index.html
@@ -46,20 +46,20 @@
             <p style="color:red;">{{feedback | safe}}</p>
         </div>
         <div id="content">
-            <h1>Scoreboard</h1>
+            <h1 class="center">Scoreboard</h1>
             <div class="left">
-                <h4>Balance</h4>
                 <ul>
+                    <h4>Balance</h4>
                     {{balance_list | safe}}
                 </ul>
-                <h4>Allocation</h4>
                 <ul>
+                    <h4>Allocation</h4>
                     {{allocation_list | safe}}
                 </ul>
             </div>
             <div class="right">
-                <h4>Trending</h4>
                 <ul>
+                <h4>Trending</h4>
                 {% for trend in trends %}
                     {% if trend.arrow == 'side.jpeg' %}
                         <li>{{trend.percent | safe}} <img src="{{ url_for('static', filename='side.jpeg') }}" alt='side'/></li>
@@ -79,8 +79,8 @@
                 <li><strong>Profit {{profit_value | safe}} or {{profit_percent | safe}}</strong></li>
             </div>
             <br class="clear"/>
-            <h1>(AIM) System</h1>
             <div class="center">
+                <h1>(AIM) System</h1>
                 <h6>devised by: Robert Lichello - HOH TO MAKE $1,000,000 IN THE STOCK MARKET AUTOMATICALLY! (Fourth Revised Edition) &copy; 2001</h6>
                 <h4>Check list</h4>
                 <li>Correct any issues with your folder to get accurate numbers</li>
