--- a/templates/index.html
+++ b/templates/index.html
@@ -89,7 +89,7 @@
             </div>
             <br class="clear"/>
             {{table | safe}}
-            <p class="center" style="color:blue;">{{initialize_prompt | safe}}</p>
+            <p class="center" style="color:blue;"><strong>{{initialize_prompt | safe}}</strong></p>
             <form action="#" method="post">
             <div class="form_settings">
                 <p><span>&nbsp;</span><input class="submit" type="submit" name="action" value="{{post_display}}" style="{{post_background}} float: right;"/></p>
