--- a/templates/404.html
+++ b/templates/404.html
@@ -1,7 +1,7 @@
 {% block body %}
-
-<h1>404: Page Not Found</h1>
-Sorry, the page you are looking for cannot be found.
-
-
+    <div class="center">
+        <img src="{{ url_for('static', filename='404.png') }}" alt='404' />
+    </div>
+    <br class="clear"/>
+    <p><strong>Sorry, the page you are looking for cannot be found.</strong></p>
 {% endblock body %}
