--- a/templates/history.html
+++ b/templates/history.html
@@ -56,6 +56,26 @@
             <h1 class="center">Activity ({{year_string}})</h1>
             {{table | safe}}
             <br class="clear"/>
+            <h1 class="center">Export</h1>
+            <p class="center">creates a spreadsheet</p>
+            <form action="#" method="post">
+            <div class="center">
+                <p><select id="id" name="column"><option value="activity">activity</option><option value="archive">archive</option><option value="portfolio">portfolio</option></select>
+                <input type="text" name="value" onfocus="this.value=''" value="enter filename"/></p>
+            </div>
+            <div class="form_settings">
+                <p><span>&nbsp;</span><input class="submit" type="submit" name="action" value="export" style="float: right;"/></p>
+            </div>
+            </form>
+            <br class="clear"/>
+            <h1 class="center">Archive</h1>
+            <p class="center">archives your current AIM system activity</p>
+            <form action="#" method="post">
+            <div class="form_settings">
+                <p><span>&nbsp;</span><input class="submit" type="submit" name="action" value="archive" style="float: right;"/></p>
+            </div>
+            </form>
+            <br class="clear"/>
 
 
             <!-- remove this div and cleanup scoreboard.py when ready to release code-->
