--- a/templates/defaults.html
+++ b/templates/defaults.html
@@ -6,7 +6,8 @@
   <meta name="description" content="your investing scoreboard" />
   <meta name="keywords" content="AIM, investing, market, scoreboard" />
   <meta http-equiv="content-type" content="text/html; charset=windows-1252" />
-<link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet"/>
+  <link rel="shortcut icon" type="image/png" href="{{ url_for('static', filename='favicon.ico') }}"/>
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}" />
 </head>
 
