got aim db gone

--- a/templates/folder.html
+++ b/templates/folder.html
@@ -55,7 +55,7 @@
             </form>
         </div>
         <div id="content">
-            <h1 class="center">Portfolio</h1>
+            <h1 class="center">{{folder_name}}</h1>
             {{table | safe}}
             <br class="clear"/>
             <div class ="left" style="{{ticker_style}}">
