DeleteNames now removes db as well

--- a/templates/history.html
+++ b/templates/history.html
@@ -54,7 +54,7 @@
             </form>
         </div>
         <div id="content">
-            <h1 class="center">Activity ({{year_string}})</h1>
+            <h1 class="center">Activity</h1>
             {{table | safe}}
             <br class="clear"/>
             <h1 class="center">Export</h1>
