Test stock in page

--- a/templates/tests.html
+++ b/templates/tests.html
@@ -24,6 +24,8 @@
     <div id="content_header"></div>
     <div id="site_content">
     <div id="content">
+        <h1>Stock Tests</h1>
+        <pre>{{test_stock | safe}}</pre>
     </div>
     </div>
     </div>
