--- a/templates/tests.html
+++ b/templates/tests.html
@@ -26,6 +26,12 @@
     <div id="content">
         <h1>Stock Tests</h1>
         <pre>{{test_stock | safe}}</pre>
+        <h1>Folder Tests</h1>
+        <pre>{{test_folder | safe}}</pre>
+        <h1>History Tests</h1>
+        <pre>{{test_history | safe}}</pre>
+        <h1>AIM Tests</h1>
+        <pre>{{test_aim | safe}}</pre>
     </div>
     </div>
     </div>
