--- a/templates/tests.html
+++ b/templates/tests.html
@@ -24,7 +24,7 @@
     <div id="content_header"></div>
     <div id="site_content">
     <div id="content">
-        <h1>Stock Tests</h1>
+        <h1>Default Tests</h1>
         <pre>{{test_stock | safe}}</pre>
         <h1>Folder Tests</h1>
         <pre>{{test_folder | safe}}</pre>
