got PrintSummary() working

--- a/templates/history.html
+++ b/templates/history.html
@@ -71,6 +71,7 @@
             <br class="clear"/>
             <h1 class="center">Archive</h1>
             <p class="center">archives your current AIM system activity</p>
+            {{archive_table | safe}}
             <form action="#" method="post">
             <div class="form_settings">
                 <p><span>&nbsp;</span><input class="submit" type="submit" name="action" value="archive" style="float: right;"/></p>
