tests page results line at top

--- a/templates/tests.html
+++ b/templates/tests.html
@@ -24,8 +24,9 @@
     <div id="content_header"></div>
     <div id="site_content">
     <div id="content">
+        <h4 class="center" style="color:{{test_color}}">{{test_results | safe}}</h4>
         <h1>Default Tests</h1>
-        <pre>{{test_stock | safe}}</pre>
+        <pre>{{test_defaults | safe}}</pre>
         <h1>Folder Tests</h1>
         <pre>{{test_folder | safe}}</pre>
         <h1>History Tests</h1>
