--- a/templates/history.html
+++ b/templates/history.html
@@ -63,7 +63,7 @@
             </form>
             <br class="clear"/>
             <h1 class="center">Archive</h1>
-            <p class="center">archives your current AIM system activity</p>
+            <p class="center">archives and compresses your current AIM system activity</p>
             {{archive_table | safe}}
             <form action="#" method="post">
             <div class="form_settings">
