--- a/templates/folder.html
+++ b/templates/folder.html
@@ -107,6 +107,16 @@
                 <p><span>&nbsp;</span><input class="submit" type="submit" name="action" value="adjust" style="float: right;"/></p>
             </div>
             </form>
+            <br class="clear"/>
+            <div class ="left" style="{{worksheet_style}}">
+                <h1>Market Order Worksheet</h1>
+                {{worksheet_table | safe}}
+                <div class="form_settings">
+                    <p><span>&nbsp;</span><input class="submit" type="submit" name="action" value="calculate" style="float: right;"/></p>
+                </div>
+                </form>
+            </div>
+            <br class="clear"/>
         </div>
     </div>
         <div id="content_footer"></div>
