got the worksheet working

--- a/templates/folder.html
+++ b/templates/folder.html
@@ -112,6 +112,7 @@
                 <h1>Market Order Worksheet</h1>
                 <form action="#" method="post">
                         {{worksheet_table | safe}}
+                        <p style="color:blue;" class="center">{{worksheet_warning | safe}}</p>
                     <div class="form_settings">
                         <p><span>&nbsp;</span><input class="submit" type="submit" name="calculate" value="calculate" style="float: right;"/></p>
                     </div>
