low level tests

--- a/templates/tests.html
+++ b/templates/tests.html
@@ -33,6 +33,8 @@
         <pre>{{test_history | safe}}</pre>
         <h1>AIM Tests</h1>
         <pre>{{test_aim | safe}}</pre>
+        <h1>Low level Tests</h1>
+        <pre>{{test_low | safe}}</pre>
     </div>
     </div>
     </div>
