--- a/templates/index.html
+++ b/templates/index.html
@@ -60,7 +60,7 @@
             </div>
             <div class="right">
                 <ul>
-                <h4>Lifetime</h4>
+                <h4>Lifetime Returns</h4>
                 {% for life in lives %}
                     {% if life.arrow == 'flat' %}
                         <li>{{life.percent | safe}} <img src="{{ url_for('static', filename='flat.png') }}" alt='flat'/></li>
@@ -74,7 +74,7 @@
                 {% endfor %}
                 </ul>
                 <ul>
-                <h4>Trending</h4>
+                <h4>Trending Prices</h4>
                 {% for trend in trends %}
                     {% if trend.arrow == 'flat' %}
                         <li>{{trend.percent | safe}} <img src="{{ url_for('static', filename='flat.png') }}" alt='flat'/></li>
