--- a/templates/folder.html
+++ b/templates/folder.html
@@ -57,6 +57,11 @@
         <div id="content">
             <h1 class="center">{{folder_name}}</h1>
             {{table | safe}}
+            <form action="#" method="post">
+            <div class="form_settings">
+                <p><span>&nbsp;</span><input class="submit" type="submit" name="action" value="refresh" style="float: right;"/></p>
+            </div>
+            </form>
             <br class="clear"/>
             <div class ="left" style="{{ticker_style}}">
                 <h1 class="center">Ticker Symbol Lookup</h1>
