--- a/templates/defaults.html
+++ b/templates/defaults.html
@@ -44,7 +44,7 @@
                 <li><a href="https://github.com/meprogrammerguy" target="_blank" >my GitHub page</a></li>
                 <li><a href="http://meprogrammerguy.com/" target="_blank" >my Blog</a></li>
                 <li><a href="https://twitter.com/meprogrammerguy/" target="_blank" >my Twitter</a></li>
-                <li><a href="http://www.wallstreetsurvivor.com/accountoverview/" target="_blank" >Wall Street Survivor</a></li>
+                <li><a href="https://app.wallstreetsurvivor.com/dashboard/" target="_blank" >Wall Street Survivor</a></li>
                 <li><a href="https://developer.tradier.com/" target="_blank" >tradier developer</a></li>
                 <li><a href="https://iextrading.com/" target="_blank" >IEX trading</a></li>
             </ul>
