--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
                 <li><a href="https://github.com/meprogrammerguy" target="_blank" >my GitHub page</a></li>
                 <li><a href="http://meprogrammerguy.com/" target="_blank" >my Blog</a></li>
                 <li><a href="https://twitter.com/meprogrammerguy/" target="_blank" >my Twitter</a></li>
-                <li><a href="http://www.wallstreetsurvivor.com/accountoverview/" target="_blank" >Wall Street Survivor</a></li>
+                <li><a href="https://app.wallstreetsurvivor.com/dashboard/" target="_blank" >Wall Street Survivor</a></li>
             </ul>
             <p style="color:red;">{{feedback | safe}}</p>
         </div>
