--- a/templates/defaults.html
+++ b/templates/defaults.html
@@ -46,7 +46,7 @@
                 <li><a href="https://twitter.com/meprogrammerguy/" target="_blank" >my Twitter</a></li>
                 <li><a href="https://app.wallstreetsurvivor.com/dashboard/" target="_blank" >Wall Street Survivor</a></li>
                 <li><a href="https://developer.tradier.com/" target="_blank" >tradier developer</a></li>
-                <li><a href="https://iextrading.com/" target="_blank" >IEX trading</a></li>
+                <li><a href="https://iexcloud.io/console" target="_blank" >IEX cloud</a></li>
             </ul>
             <p style="color:red;">{{feedback | safe}}</p>
         </div>
