support new IEX cloud page for company API call

--- a/templates/defaults.html
+++ b/templates/defaults.html
@@ -54,6 +54,7 @@
             <h1 class="center">Defaults</h1>
             {{table | safe}}
             <p class="center" style="color:blue;">{{tradier_key_warning}}</p>
+            <p class="center" style="color:blue;">{{IEX_key_warning}}</p>
             <form action="#" method="post">
             <div class="form_settings">
                 <p><span>&nbsp;</span><input class="submit" type="submit" name="action" value="reset" style="float: right;"/></p>
