--- a/templates/defaults.html
+++ b/templates/defaults.html
@@ -47,6 +47,7 @@
                 <li><a href="https://wallstreetsurvivor.com/" target="_blank" >Wall Street Survivor</a></li>
                 <li><a href="https://developer.tradier.com/" target="_blank" >tradier developer</a></li>
                 <li><a href="https://iexcloud.io/console" target="_blank" >IEX cloud</a></li>
+                <li><a href="https://coinmarketcap.com/api" target="_blank" >Coin Market Cap API</a></li>
             </ul>
             <p style="color:red;">{{feedback | safe}}</p>
         </div>
@@ -55,6 +56,7 @@
             {{table | safe}}
             <p class="center" style="color:blue;">{{tradier_key_warning}}</p>
             <p class="center" style="color:blue;">{{IEX_key_warning}}</p>
+            <p class="center" style="color:blue;">{{coin_key_warning}}</p>
             <form action="#" method="post">
             <div class="form_settings">
                 <p><span>&nbsp;</span><input class="submit" type="submit" name="action" value="reset" style="float: right;"/></p>
