--- a/templates/folder.html
+++ b/templates/folder.html
@@ -48,7 +48,18 @@
             <h3>Search</h3>
             <form method="post" action="#">
                 <p>
-                    <input class="search" type="text" onfocus="this.value=''" name="action" value="Ticker symbol" />
+                    <h5 class="left">Stock Ticker Symbol</h5>
+                    <input class="search" type="text" onfocus="this.value=''" name="action" value="symbol"/>
+                    <input hidden type="text" name="symbol" value="stock"/>
+                    <input name="search" type="image" style="border: 0; margin: 0 0 -9px 5px;" src="{{ url_for('static', filename='search.png') }}" alt="Search" title="Search" />
+                    <p style="color:red;">{{feedback | safe}}</p>
+                </p>
+            </form>
+            <form method="post" action="#">
+                <p>
+                    <h5 class="left">Crypto Ticker Symbol</h5>
+                    <input class="search" type="text" onfocus="this.value=''" name="action" value="symbol"/>
+                    <input hidden type="text" name="symbol" value="crypto"/>
                     <input name="search" type="image" style="border: 0; margin: 0 0 -9px 5px;" src="{{ url_for('static', filename='search.png') }}" alt="Search" title="Search" />
                     <p style="color:red;">{{feedback | safe}}</p>
                 </p>
