--- a/templates/folder.html
+++ b/templates/folder.html
@@ -107,6 +107,7 @@
                 <div class="form_settings">
                     <p><span>&nbsp;</span><input class="submit" type="submit" name="action" value="add" style="float: right;"/></p>
                     <input hidden type="text" name="add_symbol" value="{{ticker.symbol}}"/>
+                    <input hidden type="text" name="add_type" value="{{ticker.exchange}}"/>
                 </div>
                 </form>
             </div>
