Working through tests

--- a/templates/tests.html
+++ b/templates/tests.html
@@ -35,6 +35,8 @@
         <pre>{{test_aim | safe}}</pre>
         <h1>Low level Tests</h1>
         <pre>{{test_low | safe}}</pre>
+        <h1>Crypto Tests</h1>
+        <pre>{{test_crypto | safe}}</pre>
     </div>
     </div>
     </div>
