--- a/templates/folder.html
+++ b/templates/folder.html
@@ -87,8 +87,13 @@
                                     <input hidden type="text" name="remove_type" value="{{item['crypto']}}"/>
                                 </form>
                             </td>
+                        {% set fil = "/folder/" + item['symbol'] + ".png" %}
                         {% for k, val in item.items() %}
-                            <td>{{val}}</td>
+                            {% if k == "symbol" %}
+                                <td><img src="{{ url_for('static', filename=fil)}}", alt='{{val}}'/>{{val}}</td>
+                            {% else %}
+                                <td>{{val}}</td>
+                            {% endif %}
                         {% endfor %}
                         </tr>
                     {% endfor %}        
