logos for crypto work

--- a/templates/folder.html
+++ b/templates/folder.html
@@ -89,8 +89,8 @@
                             </td>
                         {% set fil = "/folder/" + item['symbol'] + ".png" %}
                         {% for k, val in item.items() %}
-                            {% if k == "symbol" %}
-                                <td><img src="{{ url_for('static', filename=fil)}}", alt='{{val}}'/>{{val}}</td>
+                            {% if k == "symbol" and item['crypto'] == "yes" %}
+                                <td><img src="{{ url_for('static', filename=fil)}}", alt='{{val}} 'height=”16px” width=”16px"/>{{val}}</td>
                             {% else %}
                                 <td>{{val}}</td>
                             {% endif %}
