--- a/templates/folder.html
+++ b/templates/folder.html
@@ -92,7 +92,9 @@
                         {% set fil = "/folder/" + item['symbol'] + ".png" %}
                         {% for k, val in item.items() %}
                             {% if k == "symbol" and item['crypto'] == "yes" %}
-                            <td><img src="{{ url_for('static', filename=fil)}}", alt='{{val}}', height='32', width='32'/></br>{{val}}</td>
+                                <td><img src="{{ url_for('static', filename=fil)}}", alt='{{val}} logo', height='32', width='32'/></br>{{val}}</td>
+                            {% elif k == "symbol" and item['symbol'] == "$" %}
+                                <td><img src="{{ url_for('static', filename='$.png')}}", alt='{{val}} logo', height='32', width='32'/></br></td>
                             {% else %}
                                 <td>{{val}}</td>
                             {% endif %}
