--- a/templates/folder.html
+++ b/templates/folder.html
@@ -97,7 +97,7 @@
                                     {% if k == "symbol" and item['crypto'] == "yes" %}
                                         <td><img src="{{ url_for('static', filename=fil)}}", alt='{{val}} logo', height='32', width='32'/></br>{{val}}</td>
                                     {% elif k == "symbol" and money == "$" %}
-                                        <td><img src="{{ url_for('static', filename='$.png')}}", alt='{{val}} logo', height='32', width='32'/></br>{{val}}</td>
+                                        <td><img src="{{ url_for('static', filename='/folder/$.png')}}", alt='{{val}} logo', height='32', width='32'/></br>{{val}}</td>
                                     {% else %}
                                         <td>{{val}}</td>
                                     {% endif %}
